# WhateverMusicEngine

./: Bar.cpp  CMakeLists.txt  Engine.h  Instrument.h  Module.cpp  Module.h  README.md  Track.cpp  Track.h  Voice.cpp  Voice.h
include/: Bar.h  Engine.h  Note.h
src/: Engine.cpp  Instrument.cpp
tests/: test.cpp
